tests/errors/interpolation-error.ice
ICE-1.0.0
sample >= 1.0.0

@app {
    text: "${notFound}"
}
